# pseudo-labeling

./: .gitignore  MANIFEST.in  README.md  generate_mappings.py  main.py  pyproject.toml  requirements.txt
.agent/rules/: running.md
.github/workflows/: workflow.yml
configs/: config.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  fashion_mnist.yaml  imagenet.yaml  imagenet_streaming.yaml  imagenette.yaml  stylized_imagenet.yaml
configs/finetune/cifar10/: resnet18.yaml
configs/finetune/cifar100/: mobilenet_v3_large.yaml
configs/mappings/: imagenet1k_to_cifar10.json  imagenet1k_to_cifar100.json
configs/model/: densenet121.yaml  mobilenet_v3.yaml  resnet18.yaml  swin_t.yaml
context/: Project_context.md
examples/: README.md  classifiers.py  disagreement_dataset.py  extract_features.py  extract_pre_inference_features.py  pre_inference_classifiers.py  run_experiment.py  visualize_results.py
scripts/: fix_notebook.py  verify_all_downloads.py  verify_finetuner.py  verify_inference_pipeline.py  verify_officehome_logic.py  verify_streaming.py
src/datasets/: wrappers.py
src/inference/: runner.py
src/models/: adapters.py  loader.py
src/notebooks/: analysis.ipynb  verify_analysis.py
src/pseudo_labeling/: __init__.py  cli.py
src/pseudo_labeling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pseudo_labeling/configs/: config.yaml
src/test/: example_usage.py  test_wrappers.py
src/training/: finetuner.py
src/utils/: label_mapper.py
tests/: example_usage.py  test_wrappers.py
(+26 files in other folders)
